--- a/index.html
+++ b/index.html
@@ -13,13 +13,394 @@
     <title>Moshify</title>
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe
-      perspiciatis hic quaerat, ut aut cumque tempore perferendis porro
-      veritatis deserunt!
-    </p>
+    <header>
+      <nav class="navbar collapsible">
+        <a class="navbar__brand" href="/moshify/component/nav-bar.html"
+          ><img src="images/logo.svg" alt="A nice logo"
+        /></a>
+        <svg class="icon icon--white navbar__menu-icon">
+          <use xlink:href="images/sprite.svg#menu"></use>
+        </svg>
+        <ul class="list navbar__list collapsible__content">
+          <li class="navbar__item"><a href="#">Hoisting</a></li>
+          <li class="navbar__item"><a href="#">VPS</a></li>
+          <li class="navbar__item"><a href="#">Domain</a></li>
+          <li class="navbar__item"><a href="#">Pricing</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="block block--dark block--skewed-left hero">
+      <div class="container grid grid--1x2">
+        <header class="block__header hero__content">
+          <h1 class="hero__heading">Cloud Hosting for Pros</h1>
+          <p class="hero__description">
+            Deploy your website in less than 60 seconds.
+          </p>
+          <a href="#" class="button button--accent button--stretched"
+            >get start</a
+          >
+        </header>
+        <picture>
+          <source
+            srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
+            type="image/webp"
+          />
+          <source
+            srcset="images/banner.png 1x, images/banner@2x.png 2x"
+            type="image/png"
+          />
+          <img class="hero__image" src="images/banner@2x.png" alt="" />
+        </picture>
+      </div>
+    </section>
+    <section class="block container block-domain">
+      <header class="block__header">
+        <h2 class="domain__heading">
+          The best webhosting Starting at per month
+        </h2>
+        <p class="domain__description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis sunt
+          in quisquam, reiciendis ullam consequuntur! Totam ipsa nostrum quaerat
+          ut!
+        </p>
+      </header>
+      <div class="input-group">
+        <input
+          type="text"
+          class="input"
+          placeholder="Enter a domain name ..."
+        />
+        <button class="button button--accent">
+          <svg class="icon">
+            <use xlink:href="images/sprite.svg#search"></use>
+          </svg>
+          search
+        </button>
+      </div>
+      <ul class="list block-domain__prices">
+        <li>.com $9.26</li>
+        <li>
+          <span class="badge badge--secondary badge-small">.sg $7.91</span>
+        </li>
+        <li>.space $12.98</li>
+        <li>.info $14.15</li>
+        <li>.net $16.15</li>
+        <li>.xyz $10.15</li>
+      </ul>
+    </section>
+    <section class="block block-plans container">
+      <div class="grid grid--1x3">
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--secondary badge--small">10% off</span>
+              <span class="plan__description">Easy start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 GB RAM</li>
+              </ul>
+              <button class="button button--outlined button--block">
+                buy now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="plan plan--popular">
+          <div class="card card--primary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--prcard--primary badge--small"
+                >10% off</span
+              >
+              <span class="plan__description">Easy start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 GB RAM</li>
+              </ul>
+              <button class="button button--outlined button--block">
+                buy now
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="plan">
+          <div class="card card--secondary">
+            <header class="card__header">
+              <h3 class="plan__name">Entry</h3>
+              <span class="plan__price">$14</span>
+              <span class="plan__billing-cycle">/month</span>
+              <span class="badge badge--secondary badge--small">10% off</span>
+              <span class="plan__description">Easy start on the cloud</span>
+            </header>
+            <div class="card__body">
+              <ul class="list list--tick">
+                <li class="list__item">Unlimited Websites</li>
+                <li class="list__item">Unlimited Bandwidth</li>
+                <li class="list__item">100 GB SSD Storage</li>
+                <li class="list__item">3 GB RAM</li>
+              </ul>
+              <button class="button button--outlined button--block">
+                buy now
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2>Host Оn Тhe Cloud to Keep Growing</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, iure.
+        </p>
+      </header>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon feature__icon">
+              <use xlink:href="images/sprite.svg#easy"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Super Easy to Use</h3>
+          <p class="feature__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam,
+            nesciunt?
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/easy.webp 1x, images/easy@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x"
+          />
+          <img src="images/easy@2x.jpg" alt="A feature image" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature feature--reverse-layout">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon feature__icon">
+              <use xlink:href="images/sprite.svg#computer"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">Simply fast websites</h3>
+          <p class="feature__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam,
+            nesciunt?
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/fast.webp 1x, images/fast@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x"
+          />
+          <img src="images/fast@2x.jpg" alt="A feature image" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon feature__icon">
+              <use xlink:href="images/sprite.svg#wordpress"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">WordPress made easy</h3>
+          <p class="feature__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam,
+            nesciunt?
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x"
+          />
+          <img src="images/wordpress@2x.jpg" alt="A feature image" />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature feature--reverse-layout">
+        <div class="feature__content">
+          <span class="icon-container">
+            <svg class="icon feature__icon">
+              <use xlink:href="images/sprite.svg#growth"></use>
+            </svg>
+          </span>
+          <h3 class="feature__heading">24/7 Expert Support</h3>
+          <p class="feature__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam,
+            nesciunt?
+          </p>
+          <a href="#" class="link-arrow">Learn More</a>
+        </div>
+        <picture>
+          <source
+            type="image/webp"
+            srcset="images/support.webp 1x, images/support@2x.webp 2x"
+          />
+          <source
+            type="image/jpg"
+            srcset="images/support.jpg 1x, images/support@2x.jpg 2x"
+          />
+          <img src="images/support@2x.jpg" alt="A feature image" />
+        </picture>
+      </article>
+    </section>
+    <section class="block">
+      <header class="block__header">
+        <h2 class="block__heading">What our Customer are Saying</h2>
+        <p class="testimonial__block-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam,
+          nesciunt?
+        </p>
+      </header>
+      <div class="card testimonial container">
+        <div class="grid grid--1x2">
+          <div class="testimonial__image-container">
+            <img
+              class="testimonial__image"
+              src="images/testimonial.jpg"
+              alt="A happy and smiling customer"
+            />
+            <span class="icon-container testimonial__icon-container">
+              <svg class="icon testimonial__icon">
+                <use xlink:href="images/sprite.svg#quotes"></use>
+              </svg>
+            </span>
+          </div>
+          <blockquote class="quote">
+            <p class="quote__text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores
+              ut tempora id molestias earum distinctio, non ratione culpa
+              tenetur. Consequatur!
+            </p>
+            <footer>
+              <div class="media">
+                <div class="media__image">
+                  <svg class="icon quote__line">
+                    <use xlink:href="images/sprite.svg#line"></use>
+                  </svg>
+                </div>
+                <div class="media__body">
+                  <h3 class="media__title quote__author">Jhone Lumeo</h3>
+                  <p class="media__description quote__company">MHF Company</p>
+                </div>
+              </div>
+            </footer>
+          </blockquote>
+        </div>
+      </div>
+    </section>
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <section class="collapsible collapsible--expanded footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__header footer__heading">Products</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content footer__section-content">
+            <ul class="list">
+              <li><a href="#">WordPress hoisting</a></li>
+              <li><a href="#">free automated wordPress</a></li>
+              <li><a href="#">migrations</a></li>
+              <li><a href="#">domain names</a></li>
+              <li><a href="#">monthly web hoisting</a></li>
+            </ul>
+          </div>
+        </section>
+        <!-- <span class="footer__divider"></span> -->
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__header footer__heading">compony</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content footer__section-content">
+            <ul class="list">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Affiliates</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Community</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Community</a></li>
+              <li><a href="#">Green Hosting</a></li>
+            </ul>
+          </div>
+        </section>
+        <!-- <span class="footer__divider"></span> -->
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__header footer__heading">support</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content footer__section-content">
+            <ul class="list">
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Knowledge Base</a></li>
+              <li><a href="#">Forums</a></li>
+              <li><a href="#">System Status</a></li>
+              <li><a href="#">Web Hosting</a></li>
+              <li><a href="#">DreamCompute</a></li>
+            </ul>
+          </div>
+        </section>
+        <!-- <span class="footer__divider"></span> -->
+        <section class="collapsible footer__section">
+          <header class="collapsible__header">
+            <h2 class="collapsible__header footer__heading">domains</h2>
+            <svg class="icon icon--white collapsible__chevron">
+              <use xlink:href="images/sprite.svg#chevron"></use>
+            </svg>
+          </header>
+          <div class="collapsible__content footer__section-content">
+            <ul class="list">
+              <li><a href="#">Domain Checker</a></li>
+              <li><a href="#">Domain Transfer</a></li>
+              <li><a href="#">Free Domain</a></li>
+              <li><a href="#">XYZ Domain</a></li>
+              <li><a href="#">Cheap SSL Certificate</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="footer__brand">
+          <img src="images/logo.svg" alt="" />
+          <p class="footer__copyright">Copyright &copy; 2021 MHF</p>
+        </section>
+      </div>
+      <!-- <span class="footer__divider"></span> -->
+    </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
